[gd_scene load_steps=3 format=3 uid="uid://b6q55x0odhk4y"]

[ext_resource type="Script" uid="uid://bngkof2n2ybk3" path="res://UI/DeathMenu.gd" id="1_ar5s2"]

[sub_resource type="LabelSettings" id="LabelSettings_scl5w"]
font_size = 80
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 0)

[node name="Death" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ar5s2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0, 0, 0.537255)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -251.0
offset_top = 323.0
offset_right = 248.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="LevelsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Bosses"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Menu"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_top = 159.0
offset_right = 175.0
offset_bottom = -451.0
text = "Try Again"
label_settings = SubResource("LabelSettings_scl5w")
